# tally_scripts

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
routes/: balanceSheetRoutes.py  createLedgerRoutes.py  createVoucherRoutes.py  groupRoutes.py  inventoryRoutes.py  trialBalanceRoutes.py
services/: balanceSheetService.py  createInventoryVoucherService.py  createLedgerService.py  createVoucherService.py  groupService.py  inventorySalesVoucherService.py  inventoryService.py  transactionLedgerService.py  trialBalanceService.py  updateVoucherService.py
